# RAG-AGENT-FRAMEWORK

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml  test_multi_agent_rag.py
backend/data/: rag_cache.json  sample.txt
backend/src/rag_agent_system/: main.py
backend/src/rag_agent_system/agents/: adaptive_rag.py  cache_rag.py  corrective_rag.py  mar.py  multi_agent_rag.py  multi_modal_rag.py
backend/src/rag_agent_system/api/: routes.py
backend/src/rag_agent_system/retrieval/: multi_modal_vectorstore.py  vector_store.py
frontend/app/: globals.css  page.tsx
frontend/components/: chat-message.tsx
scripts/: generate_tree.sh
